--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,6 +10,9 @@ body{
 /* nav related styles */
 nav{
     display:flex;
+    align-items:center;
+    justify-content: space-between;
+    margin:0px 200px;
 }
 .nav-title{
         color:#181818;
@@ -19,6 +22,7 @@ nav{
 }
 nav>ul{
     display:flex;
+    align-items:center;
 }
 
 nav li {
@@ -33,4 +37,22 @@ nav a{
 .btn-primary{
     border-radius: 5px;
     background: #FD6E0A;
+    border:0px;
+    color: var(--White-Color, #FFF);
+    font-size: 20px;
+    font-weight: 700;
+    padding:15px 35px;
+}
+
+/* header related styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding:30px 30px 30px 150px;
+    display:flex;
+    align-items:center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
