--- a/Styles/style.css
+++ b/Styles/style.css
@@ -166,3 +166,22 @@ main section{
     text-align: center;
     margin-top:50px;
 }
+
+/* fotter style */
+footer{
+    display: flex;
+    background-color: #FFF8F3; 
+    padding:130px 200px;
+    margin-top:100px;
+    gap:100px;
+}
+.footer-column{
+    width:50%;
+}
+.contact input,textarea{
+    display:block;
+    margin-bottom:25px;
+    padding:18px 35px;
+    font-size:16px;
+    color:#757575;
+}
