--- a/Styles/style.css
+++ b/Styles/style.css
@@ -184,4 +184,15 @@ footer{
     padding:18px 35px;
     font-size:16px;
     color:#757575;
+    border-radius:5px;
+    background:#FFF;
+    border:0;
+    width:100%;
+
+}
+.section-title{
+    text-align: left;
+}
+.social-links a{
+    margin-right:24px;
 }
